--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,12 +15,12 @@ spring:
     hibernate:
       ddl-auto: create-drop
     open-in-view: false
-#    defer-datasource-initialization: true
-#
-#  sql:
-#    init:
-#      mode: always
-#      data-locations: classpath:db/data.sql
+    defer-datasource-initialization: true
+
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:db/data.sql
 
 logging:
   level:
