--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,11 @@ plugins {
 }
 
 group = 'dev.capstone'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 
 java {
+    sourceCompatibility = 17
+    targetCompatibility = 17
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
     }
@@ -24,10 +26,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
