--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,10 @@ services:
       MYSQL_COLLATION: utf8mb4_unicode_ci
     ports:
       - "3307:3306"
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6380:6379"
+
