--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,27 +1,10 @@
+server:
+  port: ${PORT:8080}
 spring:
+  config:
+    import:
+      - optional:file:.env[.properties]
+      - classpath:/yaml/application-local.yaml
+      - classpath:/yaml/application-dev.yaml
   profiles:
-    default: local
----
-spring.config.activate.on-profile: local
-
-spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/capstone
-    username: root
-    password: root1234!
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: create-drop
-    open-in-view: false
-    defer-datasource-initialization: true
-
-  sql:
-    init:
-      mode: always
-      data-locations: classpath:db/data.sql
-
-logging:
-  level:
-    org.hibernate.SQL: DEBUG
+    active: local
