--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,3 +17,9 @@ services:
     ports:
       - "6380:6379"
 
+  capstone_redis_test:
+    image: redis:latest
+    container_name: redis_test
+    ports:
+      - "6381:6379"
+
