--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,3 +23,12 @@ services:
     ports:
       - "6381:6379"
 
+
+  grafana:
+    image: grafana/grafana:latest
+    environment:
+      - GF_INSTALL_PLUGINS=redis-datasource
+    restart: always
+    ports:
+      - 3000:3000
+
