--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,18 @@ services:
     ports:
       - "6381:6379"
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    user: root
+    restart: always
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus/config:/etc/prometheus/
+      - ./prometheus/data:/prometheus
+#    networks:
+#      - monitor
 
   grafana:
     image: grafana/grafana:latest
@@ -32,3 +44,15 @@ services:
     ports:
       - 3000:3000
 
+  redis-exporter:
+    container_name: redis-exporter
+    image: oliver006/redis_exporter:latest
+    environment:
+      - REDIS_ADDR=redis://redis:6379
+    ports:
+      - 9121:9121
+    depends_on:
+      - prometheus
+#    networks:
+#      - monitor
+    restart: always
