--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,13 +1,23 @@
 global:
   scrape_interval: 1m
 
+#scrape_configs:
+##  - job_name: 'prometheus'
+##    scrape_interval: 1m
+##    static_configs:
+##      - targets: ['localhost:9090']
+#
+#  - job_name: 'redis-exporter'
+#    scrape_interval: 5s
+#    static_configs:
+#      - targets: ['redis-exporter:9121']
+
+
 scrape_configs:
-  - job_name: 'prometheus'
-    scrape_interval: 1m
+  - job_name: 'node-exporter'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['node-exporter:9100']
 
   - job_name: 'redis-exporter'
-    scrape_interval: 5s
     static_configs:
       - targets: ['redis-exporter:9121']
