feat: Grafana 통한 Redis 모니터링 구축 완료

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,24 +31,37 @@ services:
     ports:
       - 9090:9090
     volumes:
-      - ./prometheus/config:/etc/prometheus/
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yml
       - ./prometheus/data:/prometheus
 #    networks:
-#      - monitor
+#      - capstone_monitor
 
   grafana:
     image: grafana/grafana:latest
-    environment:
-      - GF_INSTALL_PLUGINS=redis-datasource
+    container_name: grafana
     restart: always
     ports:
       - 3000:3000
+    volumes:
+      - ./grafana/data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning/
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=asdqwe123
+      - GF_USERS_ALLOW_SIGN_UP=false
+    depends_on:
+      - prometheus
+
+  node-exporter:
+    image: prom/node-exporter
+    ports:
+      - 9100:9100
 
   redis-exporter:
     container_name: redis-exporter
     image: oliver006/redis_exporter:latest
     environment:
-      - REDIS_ADDR=redis://redis:6379
+      - REDIS_ADDR=redis://redis:6380
     ports:
       - 9121:9121
     depends_on:
