--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   capstone-mysql:
     image: mysql:latest
-    container_name: capstone
+    container_name: mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root1234!
@@ -33,8 +33,8 @@ services:
     volumes:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
       - ./prometheus/data:/prometheus
-#    networks:
-#      - capstone_monitor
+  #    networks:
+  #      - capstone_monitor
 
   grafana:
     image: grafana/grafana:latest
@@ -66,6 +66,6 @@ services:
       - 9121:9121
     depends_on:
       - prometheus
-#    networks:
-#      - monitor
+    #    networks:
+    #      - monitor
     restart: always
