--- a/src/main/resources/yaml/application-dev.yaml
+++ b/src/main/resources/yaml/application-dev.yaml
@@ -3,9 +3,9 @@ spring.config.activate.on-profile: dev
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/capstone
-    username: root
-    password: root1234!
+    url: jdbc:mysql://${RDS_URL}
+    username: ${RDS_USERNAME}
+    password: ${RDS_PASSWORD}
   jpa:
     show-sql: true
     hibernate:
@@ -14,7 +14,7 @@ spring:
     defer-datasource-initialization: false
   data:
     redis:
-      port: 6380
+      port: ${REDIS_PORT}
 logging:
   level:
     org.hibernate.SQL: trace
