--- a/src/main/resources/yaml/application-local.yaml
+++ b/src/main/resources/yaml/application-local.yaml
@@ -18,7 +18,7 @@ spring:
       data-locations: classpath:db/data.sql
   data:
     redis:
-      port: 6380
+      port: ${REDIS_PORT}
 
 logging:
   level:
